--- a/Makefile.in
+++ b/Makefile.in
@@ -367,7 +367,7 @@ am_libbibledit_a_OBJECTS = library/bibledit.$(OBJEXT) \
 	mimetic098/os/file_iterator.$(OBJEXT) \
 	mimetic098/os/mmfile.$(OBJEXT) \
 	mimetic098/codec/base64.$(OBJEXT) \
-	system/googletranslate.$(OBJEXT)
+	system/googletranslate.$(OBJEXT) filter/google.$(OBJEXT)
 libbibledit_a_OBJECTS = $(am_libbibledit_a_OBJECTS)
 am_generate_OBJECTS = executable/generate.$(OBJEXT) \
 	sources/styles.$(OBJEXT)
@@ -533,51 +533,52 @@ am__depfiles_remade = access/$(DEPDIR)/bible.Po \
 	export/$(DEPDIR)/web.Po filter/$(DEPDIR)/archive.Po \
 	filter/$(DEPDIR)/css.Po filter/$(DEPDIR)/date.Po \
 	filter/$(DEPDIR)/diff.Po filter/$(DEPDIR)/git.Po \
-	filter/$(DEPDIR)/html.Po filter/$(DEPDIR)/image.Po \
-	filter/$(DEPDIR)/indonesian.Po filter/$(DEPDIR)/mail.Po \
-	filter/$(DEPDIR)/md5.Po filter/$(DEPDIR)/memory.Po \
-	filter/$(DEPDIR)/merge.Po filter/$(DEPDIR)/note.Po \
-	filter/$(DEPDIR)/passage.Po filter/$(DEPDIR)/roles.Po \
-	filter/$(DEPDIR)/shell.Po filter/$(DEPDIR)/string.Po \
-	filter/$(DEPDIR)/text.Po filter/$(DEPDIR)/url.Po \
-	filter/$(DEPDIR)/usfm.Po filter/$(DEPDIR)/webview.Po \
-	flate/$(DEPDIR)/flate.Po fonts/$(DEPDIR)/logic.Po \
-	help/$(DEPDIR)/index.Po html/$(DEPDIR)/header.Po \
-	html/$(DEPDIR)/text.Po images/$(DEPDIR)/fetch.Po \
-	images/$(DEPDIR)/index.Po images/$(DEPDIR)/logic.Po \
-	images/$(DEPDIR)/view.Po index/$(DEPDIR)/index.Po \
-	index/$(DEPDIR)/listing.Po ipc/$(DEPDIR)/focus.Po \
-	ipc/$(DEPDIR)/notes.Po jobs/$(DEPDIR)/index.Po \
-	journal/$(DEPDIR)/index.Po journal/$(DEPDIR)/logic.Po \
-	jsonxx/$(DEPDIR)/jsonxx.Po ldap/$(DEPDIR)/logic.Po \
-	lexicon/$(DEPDIR)/definition.Po lexicon/$(DEPDIR)/logic.Po \
-	library/$(DEPDIR)/bibledit.Po library/$(DEPDIR)/locks.Po \
-	locale/$(DEPDIR)/logic.Po locale/$(DEPDIR)/translate.Po \
-	manage/$(DEPDIR)/accounts.Po manage/$(DEPDIR)/exports.Po \
-	manage/$(DEPDIR)/hyphenate.Po manage/$(DEPDIR)/hyphenation.Po \
-	manage/$(DEPDIR)/index.Po manage/$(DEPDIR)/privileges.Po \
-	manage/$(DEPDIR)/users.Po manage/$(DEPDIR)/write.Po \
-	mapping/$(DEPDIR)/index.Po mapping/$(DEPDIR)/map.Po \
-	mbedtls/$(DEPDIR)/aes.Po mbedtls/$(DEPDIR)/arc4.Po \
-	mbedtls/$(DEPDIR)/asn1parse.Po mbedtls/$(DEPDIR)/asn1write.Po \
-	mbedtls/$(DEPDIR)/base64.Po mbedtls/$(DEPDIR)/bignum.Po \
-	mbedtls/$(DEPDIR)/blowfish.Po mbedtls/$(DEPDIR)/camellia.Po \
-	mbedtls/$(DEPDIR)/ccm.Po mbedtls/$(DEPDIR)/certs.Po \
-	mbedtls/$(DEPDIR)/chacha20.Po mbedtls/$(DEPDIR)/chachapoly.Po \
-	mbedtls/$(DEPDIR)/cipher.Po mbedtls/$(DEPDIR)/cipher_wrap.Po \
-	mbedtls/$(DEPDIR)/ctr_drbg.Po mbedtls/$(DEPDIR)/debug.Po \
-	mbedtls/$(DEPDIR)/des.Po mbedtls/$(DEPDIR)/dhm.Po \
-	mbedtls/$(DEPDIR)/ecdh.Po mbedtls/$(DEPDIR)/ecdsa.Po \
-	mbedtls/$(DEPDIR)/ecp.Po mbedtls/$(DEPDIR)/ecp_curves.Po \
-	mbedtls/$(DEPDIR)/entropy.Po mbedtls/$(DEPDIR)/entropy_poll.Po \
-	mbedtls/$(DEPDIR)/error.Po mbedtls/$(DEPDIR)/gcm.Po \
-	mbedtls/$(DEPDIR)/hmac_drbg.Po mbedtls/$(DEPDIR)/md.Po \
-	mbedtls/$(DEPDIR)/md5.Po mbedtls/$(DEPDIR)/md_wrap.Po \
-	mbedtls/$(DEPDIR)/net_sockets.Po mbedtls/$(DEPDIR)/oid.Po \
-	mbedtls/$(DEPDIR)/pem.Po mbedtls/$(DEPDIR)/pk.Po \
-	mbedtls/$(DEPDIR)/pk_wrap.Po mbedtls/$(DEPDIR)/pkcs12.Po \
-	mbedtls/$(DEPDIR)/pkcs5.Po mbedtls/$(DEPDIR)/pkparse.Po \
-	mbedtls/$(DEPDIR)/pkwrite.Po mbedtls/$(DEPDIR)/platform.Po \
+	filter/$(DEPDIR)/google.Po filter/$(DEPDIR)/html.Po \
+	filter/$(DEPDIR)/image.Po filter/$(DEPDIR)/indonesian.Po \
+	filter/$(DEPDIR)/mail.Po filter/$(DEPDIR)/md5.Po \
+	filter/$(DEPDIR)/memory.Po filter/$(DEPDIR)/merge.Po \
+	filter/$(DEPDIR)/note.Po filter/$(DEPDIR)/passage.Po \
+	filter/$(DEPDIR)/roles.Po filter/$(DEPDIR)/shell.Po \
+	filter/$(DEPDIR)/string.Po filter/$(DEPDIR)/text.Po \
+	filter/$(DEPDIR)/url.Po filter/$(DEPDIR)/usfm.Po \
+	filter/$(DEPDIR)/webview.Po flate/$(DEPDIR)/flate.Po \
+	fonts/$(DEPDIR)/logic.Po help/$(DEPDIR)/index.Po \
+	html/$(DEPDIR)/header.Po html/$(DEPDIR)/text.Po \
+	images/$(DEPDIR)/fetch.Po images/$(DEPDIR)/index.Po \
+	images/$(DEPDIR)/logic.Po images/$(DEPDIR)/view.Po \
+	index/$(DEPDIR)/index.Po index/$(DEPDIR)/listing.Po \
+	ipc/$(DEPDIR)/focus.Po ipc/$(DEPDIR)/notes.Po \
+	jobs/$(DEPDIR)/index.Po journal/$(DEPDIR)/index.Po \
+	journal/$(DEPDIR)/logic.Po jsonxx/$(DEPDIR)/jsonxx.Po \
+	ldap/$(DEPDIR)/logic.Po lexicon/$(DEPDIR)/definition.Po \
+	lexicon/$(DEPDIR)/logic.Po library/$(DEPDIR)/bibledit.Po \
+	library/$(DEPDIR)/locks.Po locale/$(DEPDIR)/logic.Po \
+	locale/$(DEPDIR)/translate.Po manage/$(DEPDIR)/accounts.Po \
+	manage/$(DEPDIR)/exports.Po manage/$(DEPDIR)/hyphenate.Po \
+	manage/$(DEPDIR)/hyphenation.Po manage/$(DEPDIR)/index.Po \
+	manage/$(DEPDIR)/privileges.Po manage/$(DEPDIR)/users.Po \
+	manage/$(DEPDIR)/write.Po mapping/$(DEPDIR)/index.Po \
+	mapping/$(DEPDIR)/map.Po mbedtls/$(DEPDIR)/aes.Po \
+	mbedtls/$(DEPDIR)/arc4.Po mbedtls/$(DEPDIR)/asn1parse.Po \
+	mbedtls/$(DEPDIR)/asn1write.Po mbedtls/$(DEPDIR)/base64.Po \
+	mbedtls/$(DEPDIR)/bignum.Po mbedtls/$(DEPDIR)/blowfish.Po \
+	mbedtls/$(DEPDIR)/camellia.Po mbedtls/$(DEPDIR)/ccm.Po \
+	mbedtls/$(DEPDIR)/certs.Po mbedtls/$(DEPDIR)/chacha20.Po \
+	mbedtls/$(DEPDIR)/chachapoly.Po mbedtls/$(DEPDIR)/cipher.Po \
+	mbedtls/$(DEPDIR)/cipher_wrap.Po mbedtls/$(DEPDIR)/ctr_drbg.Po \
+	mbedtls/$(DEPDIR)/debug.Po mbedtls/$(DEPDIR)/des.Po \
+	mbedtls/$(DEPDIR)/dhm.Po mbedtls/$(DEPDIR)/ecdh.Po \
+	mbedtls/$(DEPDIR)/ecdsa.Po mbedtls/$(DEPDIR)/ecp.Po \
+	mbedtls/$(DEPDIR)/ecp_curves.Po mbedtls/$(DEPDIR)/entropy.Po \
+	mbedtls/$(DEPDIR)/entropy_poll.Po mbedtls/$(DEPDIR)/error.Po \
+	mbedtls/$(DEPDIR)/gcm.Po mbedtls/$(DEPDIR)/hmac_drbg.Po \
+	mbedtls/$(DEPDIR)/md.Po mbedtls/$(DEPDIR)/md5.Po \
+	mbedtls/$(DEPDIR)/md_wrap.Po mbedtls/$(DEPDIR)/net_sockets.Po \
+	mbedtls/$(DEPDIR)/oid.Po mbedtls/$(DEPDIR)/pem.Po \
+	mbedtls/$(DEPDIR)/pk.Po mbedtls/$(DEPDIR)/pk_wrap.Po \
+	mbedtls/$(DEPDIR)/pkcs12.Po mbedtls/$(DEPDIR)/pkcs5.Po \
+	mbedtls/$(DEPDIR)/pkparse.Po mbedtls/$(DEPDIR)/pkwrite.Po \
+	mbedtls/$(DEPDIR)/platform.Po \
 	mbedtls/$(DEPDIR)/platform_util.Po \
 	mbedtls/$(DEPDIR)/poly1305.Po mbedtls/$(DEPDIR)/ripemd160.Po \
 	mbedtls/$(DEPDIR)/rsa.Po mbedtls/$(DEPDIR)/rsa_internal.Po \
@@ -1478,7 +1479,8 @@ libbibledit_a_SOURCES = \
   mimetic098/os/file_iterator.cxx \
   mimetic098/os/mmfile.cxx \
   mimetic098/codec/base64.cxx \
-  system/googletranslate.cpp
+  system/googletranslate.cpp \
+  filter/google.cpp
 
 server_SOURCES = executable/bibledit.cpp
 server_LDADD = libbibledit.a
@@ -3194,6 +3196,8 @@ mimetic098/codec/base64.$(OBJEXT): mimetic098/codec/$(am__dirstamp) \
 	mimetic098/codec/$(DEPDIR)/$(am__dirstamp)
 system/googletranslate.$(OBJEXT): system/$(am__dirstamp) \
 	system/$(DEPDIR)/$(am__dirstamp)
+filter/google.$(OBJEXT): filter/$(am__dirstamp) \
+	filter/$(DEPDIR)/$(am__dirstamp)
 
 libbibledit.a: $(libbibledit_a_OBJECTS) $(libbibledit_a_DEPENDENCIES) $(EXTRA_libbibledit_a_DEPENDENCIES) 
 	$(AM_V_at)-rm -f libbibledit.a
@@ -3666,6 +3670,7 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@filter/$(DEPDIR)/date.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@filter/$(DEPDIR)/diff.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@filter/$(DEPDIR)/git.Po@am__quote@ # am--include-marker
+@AMDEP_TRUE@@am__include@ @am__quote@filter/$(DEPDIR)/google.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@filter/$(DEPDIR)/html.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@filter/$(DEPDIR)/image.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@filter/$(DEPDIR)/indonesian.Po@am__quote@ # am--include-marker
@@ -4801,6 +4806,7 @@ distclean: distclean-am
 	-rm -f filter/$(DEPDIR)/date.Po
 	-rm -f filter/$(DEPDIR)/diff.Po
 	-rm -f filter/$(DEPDIR)/git.Po
+	-rm -f filter/$(DEPDIR)/google.Po
 	-rm -f filter/$(DEPDIR)/html.Po
 	-rm -f filter/$(DEPDIR)/image.Po
 	-rm -f filter/$(DEPDIR)/indonesian.Po
@@ -5422,6 +5428,7 @@ maintainer-clean: maintainer-clean-am
 	-rm -f filter/$(DEPDIR)/date.Po
 	-rm -f filter/$(DEPDIR)/diff.Po
 	-rm -f filter/$(DEPDIR)/git.Po
+	-rm -f filter/$(DEPDIR)/google.Po
 	-rm -f filter/$(DEPDIR)/html.Po
 	-rm -f filter/$(DEPDIR)/image.Po
 	-rm -f filter/$(DEPDIR)/indonesian.Po
