Initial setup for automatic GUI translations
through Google Translate.
https://github.com/bibledit/cloud/issues/819

--- a/Makefile.am
+++ b/Makefile.am
@@ -486,7 +486,8 @@ libbibledit_a_SOURCES = \
   mimetic098/os/mmfile.cxx \
   mimetic098/codec/base64.cxx \
   system/googletranslate.cpp \
-  filter/google.cpp
+  filter/google.cpp \
+  i18n/logic.cpp
 
 bin_PROGRAMS = server unittest generate
 
