--- a/.github/workflows/stale.yml
+++ b/.github/workflows/stale.yml
@@ -13,7 +13,7 @@ jobs:
     - uses: actions/stale@v3
       with:
         repo-token: ${{ secrets.GITHUB_TOKEN }}
-        stale-issue-message: 'This issue appears stale since there has not been activity on it during the last 30 days. Unless there is activity or the Stale label is removed, it will be automatically closed in 5 days.'
+        stale-issue-message: 'This issue appears stale since there has not been activity on it during the last 30 days. Unless there is activity or the no-issue-activity label is removed, it will be automatically closed in 5 days.'
         stale-pr-message: 'Stale pull request message'
         stale-issue-label: 'no-issue-activity'
         stale-pr-label: 'no-pr-activity'
