Uses system-provided pugixml if available
https://github.com/bibledit/cloud/issues/844

--- a/Makefile.am
+++ b/Makefile.am
@@ -614,6 +614,7 @@ AM_CXXFLAGS += $(XML2_CFLAGS)
 AM_CXXFLAGS += $(UTF8PROC_CFLAGS)
 AM_CXXFLAGS += $(GUMBO_CFLAGS)
 AM_CXXFLAGS += $(TIDY_CFLAGS) -I/usr/include/tidy
+AM_CXXFLAGS += $(PUGIXML_CFLAGS)
 
 LIBS = -Wall -lpthread -L. -g -rdynamic -ldl
 LIBS += $(CURL_LIBS)
@@ -625,6 +626,7 @@ LIBS += $(XML2_LIBS)
 LIBS += $(UTF8PROC_LIBS)
 LIBS += $(GUMBO_LIBS)
 LIBS += $(TIDY_LIBS)
+LIBS += $(PUGIXML_LIBS)
 
 # The core library compiles and embeds the mbedtls library.
 # On Debian this gives a lintian error:
